Start on tidy WebForm table views

--- a/Documents/Forms/AllItems/index.html
+++ b/Documents/Forms/AllItems/index.html
@@ -1,90 +1,8 @@
 ---
-{breadcrumbs: '', layout: default, original_url: 'http://mfma.treasury.gov.za/Documents/Forms/AllItems.aspx',
+{breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
+    href="/">MFMA</a></span><span> &gt; </span><span class="ms-sitemapdirectional">Documents</span></span>,
+  layout: default, original_url: 'http://mfma.treasury.gov.za/Documents/Forms/AllItems.aspx',
   title: null}
 
 ---
-<div>
-<table>
-<tr>
-<td><table>
-<tr>
-<td><div>
-<table>
-<tr>
-<td>
-<span><menu><menuitem></menuitem><menuitem></menuitem><menuitem></menuitem><menuitem></menuitem></menu></span><span><div><a href="http://mfma.treasury.gov.za#">Actions<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/menudark.gif"/></div></span>
-</td>
-<td><img alt="" src="/_layouts/images/blank.gif"/></td>
-<td>
-<table>
-<tr>
-<td>
-</td><td>
-</td></tr>
-</table>
-</td>
-<td>  </td>
-<td>
-<table>
-<tr>
-<td>View: </td>
-<td>
-<span><menu><menuitem></menuitem><menuitem></menuitem></menu></span><span><div><a href="http://mfma.treasury.gov.za#">All Documents<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"/></div></span>
-</td>
-</tr>
-</table>
-</td>
-</tr>
-</table>
-<table><script>
-ctx = new ContextInfo();
-ctx.listBaseType = 1;
-ctx.listTemplate = 101;
-ctx.listName = "{B86B45E0-CF83-4A4C-A023-653315D3CBCE}";
-ctx.view = "{84CA1A01-EF8A-4DE0-8DC4-47D223CB5867}";
-ctx.listUrlDir = "\u002fDocuments";
-ctx.HttpPath = "\u002f_vti_bin\u002fowssvr.dll?CS=65001";
-ctx.HttpRoot = "http:\u002f\u002fmfma.treasury.gov.za";
-ctx.imagesPath = "\u002f_layouts\u002fimages\u002f";
-ctx.PortalUrl = "";
-ctx.SendToLocationName = "";
-ctx.SendToLocationUrl = "";
-ctx.RecycleBinEnabled = -1;
-ctx.OfficialFileName = "";
-ctx.WriteSecurity = "1";
-ctx.SiteTitle = "MFMA";
-ctx.ListTitle = "Documents";
-if (ctx.PortalUrl == "") ctx.PortalUrl = null;
-ctx.displayFormUrl = "\u002fDocuments\u002fForms\u002fDispForm.aspx";
-ctx.editFormUrl = "\u002fDocuments\u002fForms\u002fEditForm.aspx";
-ctx.isWebEditorPreview = 0;
-ctx.ctxId = 1;
-g_ViewIdToViewCounterMap[ "{84CA1A01-EF8A-4DE0-8DC4-47D223CB5867}" ]= 1;
-ctx.CurrentUserId = -1;
-
-ctx.verEnabled = 1;
-
-ctx.WorkflowsAssociated = true;
- 
-ctx1 = ctx;
-</script><script>
-    On Error Resume Next
-    Set EditDocumentButton = CreateObject("SharePoint.OpenDocuments.3")
-    If (IsObject(EditDocumentButton)) Then
-        fNewDoc3 = true
-    Else
-        Set EditDocumentButton = CreateObject("SharePoint.OpenDocuments.2")
-        If (IsObject(EditDocumentButton)) Then
-            fNewDoc2 = true
-        Else
-            Set EditDocumentButton = CreateObject("SharePoint.OpenDocuments.1")
-        End If
-    End If    
-    fNewDoc = IsObject(EditDocumentButton)
-</script>
-<tr><td><table><tr><iframe src="javascript:false;"></iframe><th><div><table><tr><td><a href="http://mfma.treasury.gov.zajavascript:">Type<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"><img alt="" src="/_layouts/images/blank.gif"/></img></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></div></th><th><div><table><tr><td><a href="http://mfma.treasury.gov.zajavascript:">Name<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"/></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></div></th><th><div><table><tr><td><a href="http://mfma.treasury.gov.zajavascript:">Modified<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"><img alt="" src="/_layouts/images/blank.gif"/></img></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></div></th><th><div><table><tr><td><table><tr><td><img src="/_layouts/images/blank.gif"/></td><td><a href="http://mfma.treasury.gov.zajavascript:">Modified By<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"><img alt="" src="/_layouts/images/blank.gif"/></img></td></tr></table></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></div></th><th><div><table><tr><td><table><tr><td><img src="/_layouts/images/blank.gif"/></td><td><a href="http://mfma.treasury.gov.zajavascript:">Checked Out To<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a><img alt="" src="/_layouts/images/blank.gif"><img alt="" src="/_layouts/images/blank.gif"/></img></td></tr></table></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></div></th></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans"><img alt="Folder: 01. Integrated Development Plans" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/01. Integrated Development Plans">01. Integrated Development Plans<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/24/2010 10:07 AM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/02. Built Environment Performance Plans"><img alt="Folder: 02. Built Environment Performance Plans" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/02. Built Environment Performance Plans">02. Built Environment Performance Plans<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/9/2014 10:14 AM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/03. Budget Documentation"><img alt="Folder: 03. Budget Documentation" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/03. Budget Documentation">03. Budget Documentation<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/6/2014 4:16 PM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget Implementation Plans"><img alt="Folder: 04. Service Delivery and Budget Implementation Plans" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget Implementation Plans">04. Service Delivery and Budget Implementation Plans<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/6/2014 4:15 PM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements"><img alt="Folder: 05. Annual Financial Statements" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/05. Annual Financial Statements">05. Annual Financial Statements<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/24/2010 4:14 PM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/06. Annual Reports"><img alt="Folder: 06. Annual Reports" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/06. Annual Reports">06. Annual Reports<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>6/24/2010 10:08 AM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/07. Audit Reports"><img alt="Folder: 07. Audit Reports" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/07. Audit Reports">07. Audit Reports<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>3/1/2011 4:12 PM</nobr></td><td>Elsabe Rossouw</td><td></td></tr><tr><td><a href="http://mfma.treasury.gov.za/Documents/08. Municipal entities"><img alt="Folder: 08. Municipal entities" src="/_layouts/images/folder.gif"/></a></td><td><table><tr><td><a href="http://mfma.treasury.gov.za/Documents/08. Municipal entities">08. Municipal entities<img alt="Use SHIFT+ENTER to open the menu (new window)." src="/_layouts/images/blank.gif"/></a></td><td><img alt="" src="/_layouts/images/blank.gif"/></td></tr></table></td><td><nobr>3/20/2015 12:59 PM</nobr></td><td>Elsabe Rossouw</td><td></td></tr></table></td></tr></table><table><tr><td>Edit in Browser</td><td>/_layouts/images/icxddoc.gif</td><td>/_layouts/formserver.aspx?XsnLocation={ItemUrl}&amp;OpenIn=Browser</td><td>0x0</td><td>0x1</td><td>FileType</td><td>xsn</td><td>255</td></tr><tr><td>Edit in Browser</td><td>/_layouts/images/icxddoc.gif</td><td>/_layouts/formserver.aspx?XmlLocation={ItemUrl}&amp;OpenIn=Browser</td><td>0x0</td><td>0x1</td><td>ProgId</td><td>InfoPath.Document</td><td>255</td></tr><tr><td>Edit in Browser</td><td>/_layouts/images/icxddoc.gif</td><td>/_layouts/formserver.aspx?XmlLocation={ItemUrl}&amp;OpenIn=Browser</td><td>0x0</td><td>0x1</td><td>ProgId</td><td>InfoPath.Document.2</td><td>255</td></tr><tr><td>Edit in Browser</td><td>/_layouts/images/icxddoc.gif</td><td>/_layouts/formserver.aspx?XmlLocation={ItemUrl}&amp;OpenIn=Browser</td><td>0x0</td><td>0x1</td><td>ProgId</td><td>InfoPath.Document.3</td><td>255</td></tr><tr><td>Edit in Browser</td><td>/_layouts/images/icxddoc.gif</td><td>/_layouts/formserver.aspx?XmlLocation={ItemUrl}&amp;OpenIn=Browser</td><td>0x0</td><td>0x1</td><td>ProgId</td><td>InfoPath.Document.4</td><td>255</td></tr><tr><td>View in Web Browser</td><td>/_layouts/images/ichtmxls.gif</td><td>/_layouts/xlviewer.aspx?listguid={ListId}&amp;itemid={ItemId}&amp;DefaultItemOpen=1</td><td>0x0</td><td>0x1</td><td>FileType</td><td>xlsx</td><td>255</td></tr><tr><td>View in Web Browser</td><td>/_layouts/images/ichtmxls.gif</td><td>/_layouts/xlviewer.aspx?listguid={ListId}&amp;itemid={ItemId}&amp;DefaultItemOpen=1</td><td>0x0</td><td>0x1</td><td>FileType</td><td>xlsb</td><td>255</td></tr><tr><td>Snapshot in Excel</td><td>/_layouts/images/ewr134.gif</td><td>/_layouts/xlviewer.aspx?listguid={ListId}&amp;itemid={ItemId}&amp;Snapshot=1</td><td>0x0</td><td>0x1</td><td>FileType</td><td>xlsx</td><td>256</td></tr><tr><td>Snapshot in Excel</td><td>/_layouts/images/ewr134.gif</td><td>/_layouts/xlviewer.aspx?listguid={ListId}&amp;itemid={ItemId}&amp;Snapshot=1</td><td>0x0</td><td>0x1</td><td>FileType</td><td>xlsb</td><td>256</td></tr></table></div></td>
-</tr>
-</table></td>
-</tr>
-</table>
-</div>
+fancy table
