Fix documents tree

--- a/Documents/03. Budget Documentation/2015-16/01. Draft Budget/03. District municipalities/index.html
+++ b/Documents/03. Budget Documentation/2015-16/01. Draft Budget/03. District municipalities/index.html
@@ -1,11 +1,11 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation">03.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation">03.
   Budget Documentation</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2015%2D16">2015-16</a></span><span>
-  &gt; </span><span><a class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2015%2D16%2F01%2E%20Draft%20Budget">01.
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2015%2D16">2015-16</a></span><span>
+  &gt; </span><span><a class="ms-sitemapdirectional" href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2015%2D16%2F01%2E%20Draft%20Budget">01.
   Draft Budget</a></span><span> &gt; </span><span class="ms-sitemapdirectional">03.
   District municipalities</span></span>
 layout: default
