--- a/Documents/03. Budget Documentation/2012-13/Adopted budgets/index.html
+++ b/Documents/03. Budget Documentation/2012-13/Adopted budgets/index.html
@@ -1,10 +1,10 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation">03.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation">03.
   Budget Documentation</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2012%2D13">2012-13</a></span><span>
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F03%2E%20Budget%20Documentation%2F2012%2D13">2012-13</a></span><span>
   &gt; </span><span class="ms-sitemapdirectional">Adopted budgets</span></span>
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2012-13/Adopted
