--- a/Documents/04. Service Delivery and Budget Implementation Plans/2010-11/02. Local Municipalities/KZN434 Ubuhlebezwe/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2010-11/02. Local Municipalities/KZN434 Ubuhlebezwe/index.html
@@ -1,11 +1,11 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans">04.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans">04.
   Service Delivery and Budget Implementation Plans</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans%2F2010%2D11">2010-11</a></span><span>
-  &gt; </span><span><a class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans%2F2010%2D11%2F02%2E%20Local%20Municipalities">02.
+  class="ms-sitemapdirectional" href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans%2F2010%2D11">2010-11</a></span><span>
+  &gt; </span><span><a class="ms-sitemapdirectional" href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans%2F2010%2D11%2F02%2E%20Local%20Municipalities">02.
   Local Municipalities</a></span><span> &gt; </span><span class="ms-sitemapdirectional">KZN434
   Ubuhlebezwe</span></span>
 layout: default
