--- a/Documents/04. Service Delivery and Budget Implementation Plans/2011-12/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2011-12/index.html
@@ -1,8 +1,8 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans">04.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F04%2E%20Service%20Delivery%20and%20Budget%20Implementation%20Plans">04.
   Service Delivery and Budget Implementation Plans</a></span><span> &gt; </span><span
   class="ms-sitemapdirectional">2011-12</span></span>
 layout: default
