--- a/Documents/04. Service Delivery and Budget Implementation Plans/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/index.html
@@ -1,7 +1,7 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span class="ms-sitemapdirectional">04.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span class="ms-sitemapdirectional">04.
   Service Delivery and Budget Implementation Plans</span></span>
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Budget
