--- a/Documents/06. Annual Reports/2008-09/03. District Municipalities/index.html
+++ b/Documents/06. Annual Reports/2008-09/03. District Municipalities/index.html
@@ -1,10 +1,10 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a class="ms-sitemapdirectional"
   href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/">Documents</a></span><span> &gt; </span><span><a
-  class="ms-sitemapdirectional" href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F06%2E%20Annual%20Reports">06.
+  href="/Documents/">Documents</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F06%2E%20Annual%20Reports">06.
   Annual Reports</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="/Documents/Forms/AllItems/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F06%2E%20Annual%20Reports%2F2008%2D09">2008-09</a></span><span>
+  href="/Documents/?RootFolder=http%3A%2F%2Fmfma%2Etreasury%2Egov%2Eza%2FDocuments%2F06%2E%20Annual%20Reports%2F2008%2D09">2008-09</a></span><span>
   &gt; </span><span class="ms-sitemapdirectional">03. District Municipalities</span></span>
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2008-09/03.
