make doc and ppt links external

--- a/Documents/01. Integrated Development Plans/2015-16/02. Local Municipalities/KZN253 Emadlangeni/index.html
+++ b/Documents/01. Integrated Development Plans/2015-16/02. Local Municipalities/KZN253 Emadlangeni/index.html
@@ -15,7 +15,7 @@ original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development P
 table_items:
 - {label: Draft Process Plan 16 and 17, location: /Documents/01. Integrated Development
     Plans/2015-16/02. Local Municipalities/KZN253 Emadlangeni, modified_date: '1/20/2016
-    11:15 AM', path: /Documents/01.%20Integrated%20Development%20Plans/2015-16/02.%20Local%20Municipalities/KZN253%20Emadlangeni/Draft%20Process%20Plan%2016%20and%2017.docx,
+    11:15 AM', path: 'http://mfma.treasury.gov.za/Documents/01.%20Integrated%20Development%20Plans/2015-16/02.%20Local%20Municipalities/KZN253%20Emadlangeni/Draft%20Process%20Plan%2016%20and%2017.docx',
   type: table_form_item, user: Sephiri Tlhomeli}
 - {label: KZN253 FINAL PROCESS PLAN -MTREF TIMETABLE 15-16, location: /Documents/01.
     Integrated Development Plans/2015-16/02. Local Municipalities/KZN253 Emadlangeni,
