--- a/Documents/02. Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures/index.html
+++ b/Documents/02. Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures/index.html
@@ -15,7 +15,7 @@ original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Perfor
 table_items:
 - {label: Annexure A - Performance Matrix, location: /Documents/02. Built Environment
     Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014 1:01
-    PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20A%20-%20Performance%20Matrix.docx,
+    PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20A%20-%20Performance%20Matrix.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure B - Final Budget and Financial Reporting Tables, location: /Documents/02.
     Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
@@ -27,15 +27,15 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure D - Status of Services Infrastructure, location: /Documents/02.
     Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
-    1:01 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20D%20-%20Status%20of%20Services%20Infrastructure.docx,
+    1:01 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20D%20-%20Status%20of%20Services%20Infrastructure.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure E - Informal Settlements Upgrading Programme, location: /Documents/02.
     Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
-    1:01 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20E%20-%20Informal%20Settlements%20Upgrading%20Programme.docx,
+    1:01 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20E%20-%20Informal%20Settlements%20Upgrading%20Programme.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure F - Towards a Public Transport Plan, location: /Documents/02. Built
     Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
-    1:01 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20F%20-%20Towards%20a%20Public%20Transport%20Plan.docx,
+    1:01 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20F%20-%20Towards%20a%20Public%20Transport%20Plan.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure G - Broad Economic Sectors per Sub Area, location: /Documents/02.
     Built Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
@@ -51,11 +51,11 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure K - CBD Interventions, location: /Documents/02. Built Environment
     Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014 1:02
-    PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20K%20-%20CBD%20Interventions.docx,
+    PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20K%20-%20CBD%20Interventions.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure L - Hauweng Phase 1 Corridor System, location: /Documents/02. Built
     Environment Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014
-    1:02 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20L%20-%20Hauweng%20Phase%201%20Corridor%20System.docx,
+    1:02 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Annexures/Annexure%20L%20-%20Hauweng%20Phase%201%20Corridor%20System.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure M - Partnership Programmes, location: /Documents/02. Built Environment
     Performance Plans/2014-15/MAN Mangaung/Annexures, modified_date: '6/26/2014 1:02
