--- a/Documents/02. Built Environment Performance Plans/2014-15/MAN Mangaung/Plans/index.html
+++ b/Documents/02. Built Environment Performance Plans/2014-15/MAN Mangaung/Plans/index.html
@@ -43,7 +43,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PLAN 5A - LAND RELEASE FOR GAP MARKET AND BNG PROJECTS, location: /Documents/02.
     Built Environment Performance Plans/2014-15/MAN Mangaung/Plans, modified_date: '6/26/2014
-    1:00 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Plans/PLAN%205A%20-%20LAND%20RELEASE%20FOR%20GAP%20MARKET%20AND%20BNG%20PROJECTS.docx,
+    1:00 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Plans/PLAN%205A%20-%20LAND%20RELEASE%20FOR%20GAP%20MARKET%20AND%20BNG%20PROJECTS.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Plan 5B - Spatial Targeting of 7 land parcels and Airport Development Node,
   location: /Documents/02. Built Environment Performance Plans/2014-15/MAN Mangaung/Plans,
@@ -51,7 +51,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PLAN 6 - PRIORITY LAND ACQUISITION PARCELS, location: /Documents/02. Built
     Environment Performance Plans/2014-15/MAN Mangaung/Plans, modified_date: '6/26/2014
-    1:01 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Plans/PLAN%206%20-%20PRIORITY%20LAND%20ACQUISITION%20PARCELS.docx,
+    1:01 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Plans/PLAN%206%20-%20PRIORITY%20LAND%20ACQUISITION%20PARCELS.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PLAN 7 - Urban Networks, location: /Documents/02. Built Environment Performance
     Plans/2014-15/MAN Mangaung/Plans, modified_date: '6/26/2014 1:01 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2014-15/MAN%20Mangaung/Plans/PLAN%207%20-%20Urban%20Networks.pdf',
