--- a/Documents/02. Built Environment Performance Plans/2015-16/Final/ETH eThekwini/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/Final/ETH eThekwini/index.html
@@ -19,7 +19,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: eThekwini Council adoption_Extract-BEPP 27 May2015, location: /Documents/02.
     Built Environment Performance Plans/2015-16/Final/ETH eThekwini, modified_date: '6/4/2015
-    1:28 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/ETH%20eThekwini/eThekwini%20Council%20adoption_Extract-BEPP%2027%20May2015.docx,
+    1:28 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/ETH%20eThekwini/eThekwini%20Council%20adoption_Extract-BEPP%2027%20May2015.docx',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
