--- a/Documents/02. Built Environment Performance Plans/2015-16/Final/JHB City of Johannesburg/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/Final/JHB City of Johannesburg/index.html
@@ -23,27 +23,27 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Part A 15-04-2015_V002, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015 1:22 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/Part%20A%2015-04-2015_V002.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/Part%20A%2015-04-2015_V002.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PART B 14-04-2015 v001, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015 1:22 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20B%2014-04-2015%20v001.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20B%2014-04-2015%20v001.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PART C 14-04-2015 v001, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015 1:23 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20C%2014-04-2015%20v001.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20C%2014-04-2015%20v001.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PART D 14-04-2015 v001, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015 1:23 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20D%2014-04-2015%20v001.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20D%2014-04-2015%20v001.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: PART E 14-04-2015, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015 1:23 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20E%2014-04-2015.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/PART%20E%2014-04-2015.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Table of Contents - 15-04-2015, location: /Documents/02. Built Environment
     Performance Plans/2015-16/Final/JHB City of Johannesburg, modified_date: '6/4/2015
-    1:23 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/Table%20of%20Contents%20-%2015-04-2015.docx,
+    1:23 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/JHB%20City%20of%20Johannesburg/Table%20of%20Contents%20-%2015-04-2015.docx',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
