--- a/Documents/02. Built Environment Performance Plans/2015-16/Final/TSH City of Tshwane/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/Final/TSH City of Tshwane/index.html
@@ -21,7 +21,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: BUILD ENVIRONMENT PERFORMANCE PLAN, location: /Documents/02. Built Environment
     Performance Plans/2015-16/Final/TSH City of Tshwane, modified_date: '6/4/2015
-    1:31 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/TSH%20City%20of%20Tshwane/BUILD%20ENVIRONMENT%20PERFORMANCE%20PLAN.docx,
+    1:31 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/TSH%20City%20of%20Tshwane/BUILD%20ENVIRONMENT%20PERFORMANCE%20PLAN.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: SKMBT_C35315052914440, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/TSH City of Tshwane, modified_date: '6/4/2015 1:32 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/TSH%20City%20of%20Tshwane/SKMBT_C35315052914440.pdf',
