--- a/Documents/02. Built Environment Performance Plans/2016-17/Draft/CPT Cape Town/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/Draft/CPT Cape Town/index.html
@@ -26,7 +26,7 @@ table_items:
     4:32 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft/CPT%20Cape%20Town/20150918%20Catalytic%20Projects%20-%20North%20Eastern%20Corridor%20final.pdf',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: BEPP Read Me file, location: /Documents/02. Built Environment Performance
-    Plans/2016-17/Draft/CPT Cape Town, modified_date: '11/5/2015 4:32 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft/CPT%20Cape%20Town/BEPP%20Read%20Me%20file.docx,
+    Plans/2016-17/Draft/CPT Cape Town, modified_date: '11/5/2015 4:32 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft/CPT%20Cape%20Town/BEPP%20Read%20Me%20file.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: BEPP work in progress 3rd nov high res, location: /Documents/02. Built Environment
     Performance Plans/2016-17/Draft/CPT Cape Town, modified_date: '11/5/2015 4:32
