--- a/Documents/02. Built Environment Performance Plans/2016-17/Draft/ETH eThekwini/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/Draft/ETH eThekwini/index.html
@@ -31,7 +31,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: E - Capacity Support Implementation Plan, location: /Documents/02. Built
     Environment Performance Plans/2016-17/Draft/ETH eThekwini, modified_date: '11/5/2015
-    4:34 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft/ETH%20eThekwini/E%20-%20Capacity%20Support%20Implementation%20Plan.doc,
+    4:34 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Draft/ETH%20eThekwini/E%20-%20Capacity%20Support%20Implementation%20Plan.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: F - ToR Corporate Spatial Investment Plan.compressed, location: /Documents/02.
     Built Environment Performance Plans/2016-17/Draft/ETH eThekwini, modified_date: '11/5/2015
