--- a/Documents/02. Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Corporate Strategy Annexures/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Corporate Strategy Annexures/index.html
@@ -17,7 +17,7 @@ original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Perfor
 table_items:
 - {label: 'S.1 - BEPP Presentation to EXCO.  2016-05-30 Final  ', location: /Documents/02.
     Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Corporate Strategy
-    Annexures, modified_date: '6/7/2016 12:59 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Corporate%20Strategy%20Annexures/S.1%20-%20BEPP%20Presentation%20to%20EXCO.%20%202016-05-30%20Final%20%20.pptx,
+    Annexures, modified_date: '6/7/2016 12:59 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Corporate%20Strategy%20Annexures/S.1%20-%20BEPP%20Presentation%20to%20EXCO.%20%202016-05-30%20Final%20%20.pptx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: S.2 - Strategic Review of BE Infrastructure 2015-16. 2015-10-27 v3. compressed,
   location: /Documents/02. Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Corporate
