--- a/Documents/02. Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Related docs/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Related docs/index.html
@@ -33,7 +33,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 'I.04.2 - PTNG Application 2015-16. Final.  2015-08-24  ', location: /Documents/02.
     Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Related docs,
-  modified_date: '6/7/2016 1:00 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Related%20docs/I.04.2%20-%20PTNG%20Application%202015-16.%20Final.%20%202015-08-24%20%20.doc,
+  modified_date: '6/7/2016 1:00 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Related%20docs/I.04.2%20-%20PTNG%20Application%202015-16.%20Final.%20%202015-08-24%20%20.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: I.05.1 - Housing Sector Plan.  Adopted.  2012-01-!!   (1), location: /Documents/02.
     Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Related docs,
@@ -97,7 +97,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: I.12.1 - BEPP Progression Model - Self Assessment, location: /Documents/02.
     Built Environment Performance Plans/2016-17/Final/ETH eThekwini/Related docs,
-  modified_date: '6/7/2016 1:00 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Related%20docs/I.12.1%20-%20BEPP%20Progression%20Model%20-%20Self%20Assessment.doc,
+  modified_date: '6/7/2016 1:00 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/ETH%20eThekwini/Related%20docs/I.12.1%20-%20BEPP%20Progression%20Model%20-%20Self%20Assessment.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: I-13.1 - Integration Zones Matrix, location: /Documents/02. Built Environment
     Performance Plans/2016-17/Final/ETH eThekwini/Related docs, modified_date: '6/7/2016
