--- a/Documents/02. Built Environment Performance Plans/2016-17/Final/TSH City of Tshwane/index.html
+++ b/Documents/02. Built Environment Performance Plans/2016-17/Final/TSH City of Tshwane/index.html
@@ -18,11 +18,11 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure 3 Catalytic Projects, location: /Documents/02. Built Environment
     Performance Plans/2016-17/Final/TSH City of Tshwane, modified_date: '6/7/2016
-    1:05 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/TSH%20City%20of%20Tshwane/Annexure%203%20Catalytic%20Projects.docx,
+    1:05 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/TSH%20City%20of%20Tshwane/Annexure%203%20Catalytic%20Projects.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: CITY OF TSHWANE SPATIAL TRANSFORMATION AND EC0NOMIC DEVELOPMENT AGENDA,
   location: /Documents/02. Built Environment Performance Plans/2016-17/Final/TSH City
-    of Tshwane, modified_date: '6/7/2016 1:05 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/TSH%20City%20of%20Tshwane/CITY%20OF%20TSHWANE%20SPATIAL%20TRANSFORMATION%20AND%20EC0NOMIC%20DEVELOPMENT%20AGENDA.docx,
+    of Tshwane, modified_date: '6/7/2016 1:05 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2016-17/Final/TSH%20City%20of%20Tshwane/CITY%20OF%20TSHWANE%20SPATIAL%20TRANSFORMATION%20AND%20EC0NOMIC%20DEVELOPMENT%20AGENDA.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Copy of BEPP indicator reporting completed_30 May 2016_ NH, location: /Documents/02.
     Built Environment Performance Plans/2016-17/Final/TSH City of Tshwane, modified_date: '6/7/2016
