--- a/Documents/05. Annual Financial Statements/2007-08/03. District Municipalities/DC8 Siyanda/index.html
+++ b/Documents/05. Annual Financial Statements/2007-08/03. District Municipalities/DC8 Siyanda/index.html
@@ -18,7 +18,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Indeks en beleid van state 2007 tot 2008, location: /Documents/05. Annual
     Financial Statements/2007-08/03. District Municipalities/DC8 Siyanda, modified_date: '8/28/2012
-    3:15 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2007-08/03.%20District%20Municipalities/DC8%20Siyanda/Indeks%20en%20beleid%20van%20state%202007%20tot%202008.doc,
+    3:15 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2007-08/03.%20District%20Municipalities/DC8%20Siyanda/Indeks%20en%20beleid%20van%20state%202007%20tot%202008.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Siyanda AFS 2008, location: /Documents/05. Annual Financial Statements/2007-08/03.
     District Municipalities/DC8 Siyanda, modified_date: '8/28/2012 3:15 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2007-08/03.%20District%20Municipalities/DC8%20Siyanda/Siyanda%20AFS%202008.xls',
