--- a/Documents/05. Annual Financial Statements/2009-10/02. Local Municipalities/EC143 Maletswai/index.html
+++ b/Documents/05. Annual Financial Statements/2009-10/02. Local Municipalities/EC143 Maletswai/index.html
@@ -15,7 +15,7 @@ original_url: http://mfma.treasury.gov.za/Documents/05. Annual Financial Stateme
 table_items:
 - {label: Accounting Policy (Maletswai) GRAP 2010, location: /Documents/05. Annual
     Financial Statements/2009-10/02. Local Municipalities/EC143 Maletswai, modified_date: '1/21/2011
-    12:54 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2009-10/02.%20Local%20Municipalities/EC143%20Maletswai/Accounting%20Policy%20(Maletswai)%20GRAP%202010.doc,
+    12:54 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2009-10/02.%20Local%20Municipalities/EC143%20Maletswai/Accounting%20Policy%20(Maletswai)%20GRAP%202010.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Maletswai 2010 GRAP(30 Augustus2010) - Final - Client Copy, location: /Documents/05.
     Annual Financial Statements/2009-10/02. Local Municipalities/EC143 Maletswai,
