--- a/Documents/01. Integrated Development Plans/2013-14/02. Local Municipalities/LIM342 Mutale/index.html
+++ b/Documents/01. Integrated Development Plans/2013-14/02. Local Municipalities/LIM342 Mutale/index.html
@@ -15,7 +15,7 @@ original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development P
 table_items:
 - {label: FINAL IDP 2013.docx REVIEW DOCUMENT, location: /Documents/01. Integrated
     Development Plans/2013-14/02. Local Municipalities/LIM342 Mutale, modified_date: '12/4/2013
-    2:54 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2013-14/02.%20Local%20Municipalities/LIM342%20Mutale/FINAL%20IDP%202013.docx%20REVIEW%20DOCUMENT.docx,
+    2:54 PM', path: 'http://mfma.treasury.gov.za/Documents/01.%20Integrated%20Development%20Plans/2013-14/02.%20Local%20Municipalities/LIM342%20Mutale/FINAL%20IDP%202013.docx%20REVIEW%20DOCUMENT.docx',
   type: table_form_item, user: Sylvester Mohloli}
 title: null
 
