--- a/Documents/01. Integrated Development Plans/2014-15/03. Districts/DC37 Bojanala Platinum/index.html
+++ b/Documents/01. Integrated Development Plans/2014-15/03. Districts/DC37 Bojanala Platinum/index.html
@@ -14,7 +14,7 @@ original_url: http://mfma.treasury.gov.za/Documents/01. Integrated Development P
   Districts/DC37 Bojanala Platinum
 table_items:
 - {label: DC37 DRAFT IDP, location: /Documents/01. Integrated Development Plans/2014-15/03.
-    Districts/DC37 Bojanala Platinum, modified_date: '11/13/2014 1:10 PM', path: /Documents/01.%20Integrated%20Development%20Plans/2014-15/03.%20Districts/DC37%20Bojanala%20Platinum/DC37%20DRAFT%20IDP.docx,
+    Districts/DC37 Bojanala Platinum, modified_date: '11/13/2014 1:10 PM', path: 'http://mfma.treasury.gov.za/Documents/01.%20Integrated%20Development%20Plans/2014-15/03.%20Districts/DC37%20Bojanala%20Platinum/DC37%20DRAFT%20IDP.docx',
   type: table_form_item, user: Sephiri Tlhomeli}
 title: null
 
