--- a/Documents/02. Built Environment Performance Plans/2015-16/Final/CPT Cape Town/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/Final/CPT Cape Town/index.html
@@ -14,10 +14,10 @@ original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Perfor
   Plans/2015-16/Final/CPT Cape Town
 table_items:
 - {label: BEPP IGR agenda 6th Feb, location: /Documents/02. Built Environment Performance
-    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:24 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/BEPP%20IGR%20agenda%206th%20Feb.docx,
+    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:24 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/BEPP%20IGR%20agenda%206th%20Feb.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Catalytic Projects Theme, location: /Documents/02. Built Environment Performance
-    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:24 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Catalytic%20Projects%20Theme.pptx,
+    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:24 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Catalytic%20Projects%20Theme.pptx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: CoCT BEPP 2015-16 - Final June 2nd High Res, location: /Documents/02. Built
     Environment Performance Plans/2015-16/Final/CPT Cape Town, modified_date: '6/9/2015
@@ -28,14 +28,14 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Council Minutes Continuation of Adjourned Meeting 2 June 2015 (Draft), location: /Documents/02.
     Built Environment Performance Plans/2015-16/Final/CPT Cape Town, modified_date: '6/9/2015
-    4:47 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Council%20Minutes%20Continuation%20of%20Adjourned%20Meeting%202%20June%202015%20(Draft).doc,
+    4:47 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Council%20Minutes%20Continuation%20of%20Adjourned%20Meeting%202%20June%202015%20(Draft).doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Final BEPP submisison letter, location: /Documents/02. Built Environment
     Performance Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:24 PM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Final%20BEPP%20submisison%20letter.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Final%20BEPP%20submisison%20letter.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Social Amenities theme, location: /Documents/02. Built Environment Performance
-    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:25 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Social%20Amenities%20theme.pptx,
+    Plans/2015-16/Final/CPT Cape Town, modified_date: '6/4/2015 1:25 PM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Social%20Amenities%20theme.pptx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Thumbs, location: /Documents/02. Built Environment Performance Plans/2015-16/Final/CPT
     Cape Town, modified_date: '6/4/2015 1:38 PM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/CPT%20Cape%20Town/Thumbs.db,
