--- a/Documents/02. Built Environment Performance Plans/2015-16/Final/MAN Mangaung/index.html
+++ b/Documents/02. Built Environment Performance Plans/2015-16/Final/MAN Mangaung/index.html
@@ -23,7 +23,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure A - Performance Matrix, location: /Documents/02. Built Environment
     Performance Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015 9:12 AM',
-  path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20A%20-%20Performance%20Matrix.docx,
+  path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20A%20-%20Performance%20Matrix.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure B - Capital Budget and Financial Reporting Tables, location: /Documents/02.
     Built Environment Performance Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015
@@ -35,14 +35,14 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure E - Informal Settlements Upgrading Programme, location: /Documents/02.
     Built Environment Performance Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015
-    9:12 AM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20E%20-%20Informal%20Settlements%20Upgrading%20Programme.docx,
+    9:12 AM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20E%20-%20Informal%20Settlements%20Upgrading%20Programme.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Annexure F - Towards a Public Transport Plan, location: /Documents/02. Built
     Environment Performance Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015
-    9:12 AM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20F%20-%20Towards%20a%20Public%20Transport%20Plan.docx,
+    9:12 AM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Annexure%20F%20-%20Towards%20a%20Public%20Transport%20Plan.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: BEPP 2015 2016 Final, location: /Documents/02. Built Environment Performance
-    Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015 9:13 AM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/BEPP%202015%202016%20Final.docx,
+    Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015 9:13 AM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/BEPP%202015%202016%20Final.docx',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: BEPP 2015 2016 Final, location: /Documents/02. Built Environment Performance
     Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015 9:13 AM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/BEPP%202015%202016%20Final.pdf',
@@ -84,7 +84,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Vista Park Ext 2-3-Hillsid View - Project Business Plans 2014, location: /Documents/02.
     Built Environment Performance Plans/2015-16/Final/MAN Mangaung, modified_date: '7/9/2015
-    9:12 AM', path: /Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Vista%20Park%20Ext%202-3-Hillsid%20View%20-%20Project%20Business%20Plans%202014.docx,
+    9:12 AM', path: 'http://mfma.treasury.gov.za/Documents/02.%20Built%20Environment%20Performance%20Plans/2015-16/Final/MAN%20Mangaung/Vista%20Park%20Ext%202-3-Hillsid%20View%20-%20Project%20Business%20Plans%202014.docx',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
