--- a/Documents/04. Service Delivery and Budget Implementation Plans/2008-09/02. Local municipalities/FS204 Metsimaholo/FS204 Metsimaholo/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2008-09/02. Local municipalities/FS204 Metsimaholo/FS204 Metsimaholo/index.html
@@ -18,7 +18,7 @@ original_url: http://mfma.treasury.gov.za/Documents/04. Service Delivery and Bud
 table_items:
 - {label: SDBIP Final_FS204, location: /Documents/04. Service Delivery and Budget
     Implementation Plans/2008-09/02. Local municipalities/FS204 Metsimaholo/FS204
-    Metsimaholo, modified_date: '7/30/2010 3:35 PM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/02.%20Local%20municipalities/FS204%20Metsimaholo/FS204%20Metsimaholo/SDBIP%20Final_FS204.doc,
+    Metsimaholo, modified_date: '7/30/2010 3:35 PM', path: 'http://mfma.treasury.gov.za/Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2008-09/02.%20Local%20municipalities/FS204%20Metsimaholo/FS204%20Metsimaholo/SDBIP%20Final_FS204.doc',
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
