--- a/Documents/04. Service Delivery and Budget Implementation Plans/2011-12/02. Local Municipalities/KZN223 Mpofana/index.html
+++ b/Documents/04. Service Delivery and Budget Implementation Plans/2011-12/02. Local Municipalities/KZN223 Mpofana/index.html
@@ -24,11 +24,11 @@ table_items:
   type: table_form_item, user: Lawrence Gqesha}
 - {label: KZN223_SDBIP_2012.Final, location: /Documents/04. Service Delivery and Budget
     Implementation Plans/2011-12/02. Local Municipalities/KZN223 Mpofana, modified_date: '2/8/2012
-    10:01 AM', path: /Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12/02.%20Local%20Municipalities/KZN223%20Mpofana/KZN223_SDBIP_2012.Final.docx,
+    10:01 AM', path: 'http://mfma.treasury.gov.za/Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12/02.%20Local%20Municipalities/KZN223%20Mpofana/KZN223_SDBIP_2012.Final.docx',
   type: table_form_item, user: Lawrence Gqesha}
 - {label: 'sdbip_fernhill_11_12[1]', location: /Documents/04. Service Delivery and
     Budget Implementation Plans/2011-12/02. Local Municipalities/KZN223 Mpofana, modified_date: '2/8/2012
-    10:01 AM', path: '/Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12/02.%20Local%20Municipalities/KZN223%20Mpofana/sdbip_fernhill_11_12[1].docx',
+    10:01 AM', path: 'http://mfma.treasury.gov.za/Documents/04.%20Service%20Delivery%20and%20Budget%20Implementation%20Plans/2011-12/02.%20Local%20Municipalities/KZN223%20Mpofana/sdbip_fernhill_11_12[1].docx',
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
