--- a/Documents/05. Annual Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City/index.html
+++ b/Documents/05. Annual Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City/index.html
@@ -19,15 +19,15 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 1st AFS-Accounting Policies-Delivered to AG 31-08-07, location: /Documents/05.
     Annual Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City,
-  modified_date: '10/7/2010 2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20AFS-Accounting%20Policies-Delivered%20to%20AG%2031-08-07.doc,
+  modified_date: '10/7/2010 2:06 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20AFS-Accounting%20Policies-Delivered%20to%20AG%2031-08-07.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 1st AFS-Cover Page-Delivered to AG 31-08-07, location: /Documents/05. Annual
     Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City, modified_date: '10/7/2010
-    2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20AFS-Cover%20Page-Delivered%20to%20AG%2031-08-07.doc,
+    2:06 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20AFS-Cover%20Page-Delivered%20to%20AG%2031-08-07.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 1st Con AFS-Accounting Policies-Delivered to AG 28-09-07, location: /Documents/05.
     Annual Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City,
-  modified_date: '10/7/2010 2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20Con%20AFS-Accounting%20Policies-Delivered%20to%20AG%2028-09-07.doc,
+  modified_date: '10/7/2010 2:06 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20Con%20AFS-Accounting%20Policies-Delivered%20to%20AG%2028-09-07.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 1st Cons AFS- Delivered to AG 28-09-07, location: /Documents/05. Annual
     Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City, modified_date: '10/7/2010
@@ -35,7 +35,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {label: 1st Cons AFS-Cover Page-Delivered to AG 28-09-07, location: /Documents/05.
     Annual Financial Statements/2006-07/02. Local municipalities/EC125 Buffalo City,
-  modified_date: '10/7/2010 2:06 PM', path: /Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20Cons%20AFS-Cover%20Page-Delivered%20to%20AG%2028-09-07.doc,
+  modified_date: '10/7/2010 2:06 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/1st%20Cons%20AFS-Cover%20Page-Delivered%20to%20AG%2028-09-07.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: afs07-12-07, location: /Documents/05. Annual Financial Statements/2006-07/02.
     Local municipalities/EC125 Buffalo City, modified_date: '10/7/2010 2:06 PM', path: 'http://mfma.treasury.gov.za/Documents/05.%20Annual%20Financial%20Statements/2006-07/02.%20Local%20municipalities/EC125%20Buffalo%20City/afs07-12-07.xls',
