--- a/Documents/06. Annual Reports/2008-09/02. Local Municipalities/EC124 Amahlathi/index.html
+++ b/Documents/06. Annual Reports/2008-09/02. Local Municipalities/EC124 Amahlathi/index.html
@@ -26,7 +26,7 @@ table_items:
     Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:51 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Cap%20Exp%2008.09.xls',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Chapter 3, location: /Documents/06. Annual Reports/2008-09/02. Local Municipalities/EC124
-    Amahlathi, modified_date: '8/4/2010 4:51 PM', path: /Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Chapter%203.doc,
+    Amahlathi, modified_date: '8/4/2010 4:51 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Chapter%203.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Chapter 3, location: /Documents/06. Annual Reports/2008-09/02. Local Municipalities/EC124
     Amahlathi, modified_date: '8/4/2010 4:51 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Chapter%203.pdf',
@@ -38,16 +38,16 @@ table_items:
     Local Municipalities/EC124 Amahlathi, modified_date: '2/3/2011 1:45 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/EC124%20Amahlathi%20Annual%20Report%202008-09.pdf',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: FINAL AUDIT REPORT 10 DECEMBER 2009, location: /Documents/06. Annual Reports/2008-09/02.
-    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: /Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/FINAL%20AUDIT%20REPORT%2010%20DECEMBER%202009.doc,
+    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/FINAL%20AUDIT%20REPORT%2010%20DECEMBER%202009.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Financial Statements, location: /Documents/06. Annual Reports/2008-09/02.
     Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Financial%20Statements.XLS',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Form EEA2 - Employment Equity Report, location: /Documents/06. Annual Reports/2008-09/02.
-    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: /Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Form%20EEA2%20-%20Employment%20Equity%20Report.doc,
+    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Form%20EEA2%20-%20Employment%20Equity%20Report.doc',
   type: table_form_item, user: Elsabe Rossouw}
 - {label: Responses to 2008.09 Audit Report, location: /Documents/06. Annual Reports/2008-09/02.
-    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: /Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Responses%20to%202008.09%20Audit%20Report.doc,
+    Local Municipalities/EC124 Amahlathi, modified_date: '8/4/2010 4:52 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/EC124%20Amahlathi/Responses%20to%202008.09%20Audit%20Report.doc',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
