--- a/Documents/06. Annual Reports/2014-15/02. Local municipalities/LIM361 Thabazimbi/index.html
+++ b/Documents/06. Annual Reports/2014-15/02. Local municipalities/LIM361 Thabazimbi/index.html
@@ -14,7 +14,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2014-15/0
 table_items:
 - {label: Thabazimbi LM  Final Annual Performance  Report 28 Aug 2015, location: /Documents/06.
     Annual Reports/2014-15/02. Local municipalities/LIM361 Thabazimbi, modified_date: '10/23/2015
-    10:20 AM', path: /Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/LIM361%20Thabazimbi/Thabazimbi%20LM%20%20Final%20Annual%20Performance%20%20Report%2028%20Aug%202015.docx,
+    10:20 AM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/LIM361%20Thabazimbi/Thabazimbi%20LM%20%20Final%20Annual%20Performance%20%20Report%2028%20Aug%202015.docx',
   type: table_form_item, user: Lawrence Gqesha}
 - {label: Thumbs, location: /Documents/06. Annual Reports/2014-15/02. Local municipalities/LIM361
     Thabazimbi, modified_date: '10/23/2015 10:20 AM', path: /Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/LIM361%20Thabazimbi/Thumbs.db,
