--- a/Documents/06. Annual Reports/2014-15/02. Local municipalities/LIM362 Lephalale/index.html
+++ b/Documents/06. Annual Reports/2014-15/02. Local municipalities/LIM362 Lephalale/index.html
@@ -13,7 +13,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2014-15/0
   Local municipalities/LIM362 Lephalale
 table_items:
 - {label: 11 Lephalale APR_300830, location: /Documents/06. Annual Reports/2014-15/02.
-    Local municipalities/LIM362 Lephalale, modified_date: '10/23/2015 10:20 AM', path: /Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/LIM362%20Lephalale/11%20Lephalale%20APR_300830.docx,
+    Local municipalities/LIM362 Lephalale, modified_date: '10/23/2015 10:20 AM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/LIM362%20Lephalale/11%20Lephalale%20APR_300830.docx',
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
