--- a/Documents/06. Annual Reports/2014-15/02. Local municipalities/MP306 Dipalaseng/index.html
+++ b/Documents/06. Annual Reports/2014-15/02. Local municipalities/MP306 Dipalaseng/index.html
@@ -13,7 +13,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2014-15/0
   Local municipalities/MP306 Dipalaseng
 table_items:
 - {label: 14-15  Annual Performance Report, location: /Documents/06. Annual Reports/2014-15/02.
-    Local municipalities/MP306 Dipalaseng, modified_date: '10/23/2015 10:13 AM', path: /Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/MP306%20Dipalaseng/14-15%20%20Annual%20Performance%20Report.docx,
+    Local municipalities/MP306 Dipalaseng, modified_date: '10/23/2015 10:13 AM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2014-15/02.%20Local%20municipalities/MP306%20Dipalaseng/14-15%20%20Annual%20Performance%20Report.docx',
   type: table_form_item, user: Lawrence Gqesha}
 title: null
 
