--- a/Documents/07. Audit Reports/2008-09/02. Local municipalities/KZN274 Hlabisa/index.html
+++ b/Documents/07. Audit Reports/2008-09/02. Local municipalities/KZN274 Hlabisa/index.html
@@ -13,7 +13,7 @@ original_url: http://mfma.treasury.gov.za/Documents/07. Audit Reports/2008-09/02
   Local municipalities/KZN274 Hlabisa
 table_items:
 - {label: KZN274 Hlabisa Audit Report 2008-09, location: /Documents/07. Audit Reports/2008-09/02.
-    Local municipalities/KZN274 Hlabisa, modified_date: '3/4/2011 3:30 PM', path: /Documents/07.%20Audit%20Reports/2008-09/02.%20Local%20municipalities/KZN274%20Hlabisa/KZN274%20Hlabisa%20Audit%20Report%202008-09.doc,
+    Local municipalities/KZN274 Hlabisa, modified_date: '3/4/2011 3:30 PM', path: 'http://mfma.treasury.gov.za/Documents/07.%20Audit%20Reports/2008-09/02.%20Local%20municipalities/KZN274%20Hlabisa/KZN274%20Hlabisa%20Audit%20Report%202008-09.doc',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
