--- a/Documents/07. Audit Reports/2009-10/03. District municipalities/DC20 Fezile Dabi/index.html
+++ b/Documents/07. Audit Reports/2009-10/03. District municipalities/DC20 Fezile Dabi/index.html
@@ -13,7 +13,7 @@ original_url: http://mfma.treasury.gov.za/Documents/07. Audit Reports/2009-10/03
   District municipalities/DC20 Fezile Dabi
 table_items:
 - {label: DC20 Fezile Dabi Audit Report 2009-10, location: /Documents/07. Audit Reports/2009-10/03.
-    District municipalities/DC20 Fezile Dabi, modified_date: '3/1/2011 4:22 PM', path: /Documents/07.%20Audit%20Reports/2009-10/03.%20District%20municipalities/DC20%20Fezile%20Dabi/DC20%20Fezile%20Dabi%20Audit%20Report%202009-10.docx,
+    District municipalities/DC20 Fezile Dabi, modified_date: '3/1/2011 4:22 PM', path: 'http://mfma.treasury.gov.za/Documents/07.%20Audit%20Reports/2009-10/03.%20District%20municipalities/DC20%20Fezile%20Dabi/DC20%20Fezile%20Dabi%20Audit%20Report%202009-10.docx',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
