Add some more file extensions for external links

--- a/Documents/06. Annual Reports/2008-09/02. Local Municipalities/KZN235 Okhahlamba/index.html
+++ b/Documents/06. Annual Reports/2008-09/02. Local Municipalities/KZN235 Okhahlamba/index.html
@@ -14,7 +14,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2008-09/0
 table_items:
 - {_type: TableFormItem, label: Annual Report 08-09, location: /Documents/06. Annual
     Reports/2008-09/02. Local Municipalities/KZN235 Okhahlamba, modified_date: '7/2/2013
-    12:47 PM', path: /Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/KZN235%20Okhahlamba/Annual%20Report%2008-09.txt,
+    12:47 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2008-09/02.%20Local%20Municipalities/KZN235%20Okhahlamba/Annual%20Report%2008-09.txt',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
