--- a/Documents/06. Annual Reports/2009-10/02. Local Municipalities/FS192 Dihlabeng/index.html
+++ b/Documents/06. Annual Reports/2009-10/02. Local Municipalities/FS192 Dihlabeng/index.html
@@ -14,7 +14,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2009-10/0
 table_items:
 - {_type: TableFormItem, label: FS192 Dihlabeng Annual Report 2009-10, location: /Documents/06.
     Annual Reports/2009-10/02. Local Municipalities/FS192 Dihlabeng, modified_date: '7/5/2012
-    10:54 AM', path: /Documents/06.%20Annual%20Reports/2009-10/02.%20Local%20Municipalities/FS192%20Dihlabeng/FS192%20Dihlabeng%20Annual%20Report%202009-10.log,
+    10:54 AM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2009-10/02.%20Local%20Municipalities/FS192%20Dihlabeng/FS192%20Dihlabeng%20Annual%20Report%202009-10.log',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: FS192 Dihlabeng Annual Report 2009-10, location: /Documents/06.
     Annual Reports/2009-10/02. Local Municipalities/FS192 Dihlabeng, modified_date: '7/5/2012
