--- a/Documents/06. Annual Reports/2010-11/02. Local Municipalities/EC104 Makana/index.html
+++ b/Documents/06. Annual Reports/2010-11/02. Local Municipalities/EC104 Makana/index.html
@@ -18,7 +18,7 @@ table_items:
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: Upload Log   2012 03 12 01 00 00 PM, location: /Documents/06.
     Annual Reports/2010-11/02. Local Municipalities/EC104 Makana, modified_date: '3/12/2012
-    1:02 PM', path: /Documents/06.%20Annual%20Reports/2010-11/02.%20Local%20Municipalities/EC104%20Makana/Upload%20Log%20%20%202012%2003%2012%2001%2000%2000%20PM.msg,
+    1:02 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2010-11/02.%20Local%20Municipalities/EC104%20Makana/Upload%20Log%20%20%202012%2003%2012%2001%2000%2000%20PM.msg',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
