--- a/Documents/06. Annual Reports/2013-14/02. Local municipalities/FS182 Tokologo/index.html
+++ b/Documents/06. Annual Reports/2013-14/02. Local municipalities/FS182 Tokologo/index.html
@@ -13,7 +13,7 @@ original_url: http://mfma.treasury.gov.za/Documents/06. Annual Reports/2013-14/0
   Local municipalities/FS182 Tokologo
 table_items:
 - {_type: TableFormItem, label: AD$B18, location: /Documents/06. Annual Reports/2013-14/02.
-    Local municipalities/FS182 Tokologo, modified_date: '2/16/2015 3:59 PM', path: /Documents/06.%20Annual%20Reports/2013-14/02.%20Local%20municipalities/FS182%20Tokologo/AD$B18.tmp,
+    Local municipalities/FS182 Tokologo, modified_date: '2/16/2015 3:59 PM', path: 'http://mfma.treasury.gov.za/Documents/06.%20Annual%20Reports/2013-14/02.%20Local%20municipalities/FS182%20Tokologo/AD$B18.tmp',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: FS182 Tokologo Draft Annual Report 2013-14, location: /Documents/06.
     Annual Reports/2013-14/02. Local municipalities/FS182 Tokologo, modified_date: '2/16/2015
