--- a/Documents/08. Municipal entities/2014-15/01. Metros/CPT Cape Town/index.html
+++ b/Documents/08. Municipal entities/2014-15/01. Metros/CPT Cape Town/index.html
@@ -14,7 +14,7 @@ original_url: http://mfma.treasury.gov.za/Documents/08. Municipal entities/2014-
 table_items:
 - {_type: TableFormItem, label: D Schedule_1415_May14_NT Submission, location: /Documents/08.
     Municipal entities/2014-15/01. Metros/CPT Cape Town, modified_date: '3/20/2015
-    1:05 PM', path: /Documents/08.%20Municipal%20entities/2014-15/01.%20Metros/CPT%20Cape%20Town/D%20Schedule_1415_May14_NT%20Submission.xlsm,
+    1:05 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/01.%20Metros/CPT%20Cape%20Town/D%20Schedule_1415_May14_NT%20Submission.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: E Schedule Ver 2.2 - 1314Adj_May2014_NT Submission,
   location: /Documents/08. Municipal entities/2014-15/01. Metros/CPT Cape Town, modified_date: '3/20/2015
