--- a/Documents/08. Municipal entities/2014-15/03. District municipalities/DC21 ugu/index.html
+++ b/Documents/08. Municipal entities/2014-15/03. District municipalities/DC21 ugu/index.html
@@ -14,31 +14,31 @@ original_url: http://mfma.treasury.gov.za/Documents/08. Municipal entities/2014-
 table_items:
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M01,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M01.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M01.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M03,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M03.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M03.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M04,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M04.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M04.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M05,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M05.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M05.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M06,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M06.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M06.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M07,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M07.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M07.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 - {_type: TableFormItem, label: UGUDC21_F Schedule Monthly Budget Statement_2015_M08,
   location: /Documents/08. Municipal entities/2014-15/03. District municipalities/DC21
-    ugu, modified_date: '3/20/2015 1:39 PM', path: /Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M08.xlsm,
+    ugu, modified_date: '3/20/2015 1:39 PM', path: 'http://mfma.treasury.gov.za/Documents/08.%20Municipal%20entities/2014-15/03.%20District%20municipalities/DC21%20ugu/UGUDC21_F%20Schedule%20Monthly%20Budget%20Statement_2015_M08.xlsm',
   type: table_form_item, user: Elsabe Rossouw}
 title: null
 
